Fixed some of the css and now the semesters auto fill into the dropdown box. The courses and submit button remain unusable until you select a semester, and until you select a course. Submit and go back button are huge because there is some bug with a hidden button behind it that I haven't put energy into finding yet

--- a/styles.css
+++ b/styles.css
@@ -388,6 +388,7 @@ input[type="button"]:hover {
     cursor: pointer;
     margin-top: 12px;
     padding: 12px 25px;
+    width: 100%;
 }
 
 #backButton:hover,
